--- a/styles/base.css
+++ b/styles/base.css
@@ -85,7 +85,7 @@ h1 {
     padding: 20px;
     display: block;
     text-align: center;
-    padding: .75 rem 0;
+    padding: .75 rem;
 }
 
 .card ul {
