--- a/styles/larger.css
+++ b/styles/larger.css
@@ -19,6 +19,12 @@
         justify-content: space-around;
     }
 
+    nav a {
+        display: block;
+        color: black;
+        text-decoration: none;
+    }
+
     main {
         max-width: 800px;
         margin: 0 auto;
