--- a/styles/base.css
+++ b/styles/base.css
@@ -62,6 +62,8 @@ nav .active {
     border: 1px solid black;
     padding: 5px;
     margin: 10px;
+    background-color: rgb(134, 204, 240);
+    color: black;
 }
 
 #menu::before {
