--- a/week04/styles/base.css
+++ b/week04/styles/base.css
@@ -59,6 +59,44 @@ main {
     min-height: 20rem;
 }
 
+/* -------------------- FORM ---------------------- */
+
+form fieldset {
+    margin: 2rem 0;
+    border: 1px solid #445ba9;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+
+form legend {
+    color: #445ba9;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+
+form label.top, form div {
+    display: block;
+    padding-top: 1rem;
+    color: #9c2c13;
+    font-size: .8rem;
+}
+
+form label.top input, form label.top select {
+    display: block;
+    font-size: 1rem;
+    border: 1px solid #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 45rem;
+    background-color: rgb(0,0,0, 0.1);
+}
+
+
+
+
+
 
 /*----------- FOOTER --------------*/
 footer {
@@ -66,8 +104,6 @@ footer {
     padding: .5rem 2%;
     text-align: center;
 }
-
-
 
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
