--- a/week04/styles/base.css
+++ b/week04/styles/base.css
@@ -82,6 +82,7 @@ form label.top, form div {
 }
 
 form label.top input, form label.top select {
+    -webkit-appearance: none;
     display: block;
     font-size: 1rem;
     border: 1px solid #999;
@@ -89,12 +90,34 @@ form label.top input, form label.top select {
     padding: .75rem;
     color: #555;
     width: 100%;
-    max-width: 45rem;
+    max-width: 20rem;
     background-color: rgb(0,0,0, 0.1);
 }
 
+form label.sbs {
+    display: block;
+    padding: .75rem 0;
+    color: #555;
+}
 
+form label.submitBtn {
+    border: none;
+    background-color: #9c2c13;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
 
+form label.top input:required {
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
 
 
 
