--- a/styles/form.css
+++ b/styles/form.css
@@ -55,6 +55,10 @@ form label.top input {
     font-size: 12px;
 }
 
+#pswrd2::placeholder {
+    font-size: 12px;
+}
+
 #email::placeholder {
     font-size: 12px;
 }
