--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -1,27 +1,55 @@
 header {
-    margin: auto 0;
+    text-align: center;
 }
 
 #cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    background-color: rgb(226, 202, 249);
+    background-color: rgb(236, 225, 246);
+    column-gap: 5px;
+    row-gap: 5px;
+    padding: 10px;
+    box-shadow: 0 0 20px rgb(178, 152, 203);
 }
 
 #cards p {
-    color: rgb(64, 13, 111);
+    color: rgb(58, 14, 100);
     font-family: 'Open Sans', sans-serif;
+    padding: 0px;   
+    margin: 0px;
 }
 
 h1 {
     color: rgb(64, 13, 111);
+    font-family: 'Merriweather', serif;
 }
 
 #cards h2 {
-    color: rgb(64, 13, 111);
+    color: rgb(58, 14, 100);
+    margin: 5px;
+    font-family: 'Merriweather', serif;
 }
 
 #cards section {
-    background-color: rgb(193, 164, 220);
+    background-color: rgb(178, 152, 203);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid rgb(64, 13, 111);
+}
+
+#cards img {
+    width: 250px;
+    height: 325px;
+    margin: 10px;
+}
+
+footer {
+    font-family: 'Merriweather', serif;
+    font-size: 20px;
+    text-align: center;
+    margin: 15px;
+    color: rgb(58, 14, 100);
+    padding: 10px;
 }
 
