--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -231,10 +231,12 @@ nav a:hover {
 
 footer span {
     font-size: 16px;
+    font-family: 'Rubik', sans-serif;
 }
 
 .bottom {
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 5px;
 }
 
 #images {
