--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -280,7 +280,7 @@ footer {
     border: 2px solid #FFB703;
     border-radius: 10px;
     margin: 10px;
-    padding: px; 
+    padding: 0px; 
     box-shadow: 0 0 15px #219EBC;
 }
 
