--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -250,21 +250,31 @@ footer {
     margin: 0;
 }
 
-#images  {
+#images {
 
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#images figure img {
+.pics img {
     width: 80%;
     height: auto;
-    align-items: center;
+    
+
 }
 
-#images figure figcaption {
-    text-align: center;
+.pics {
+    position: relative;
+    
+}
+
+.pics span{
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    color: #023047;
+    background-color: rgb(255, 255, 255, .40);
 }
 
 #grid1 {
