--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -79,10 +79,11 @@
         text-align: center;
     }
 
-    #discover h1 {
+    #discover {
         color: #023047;
         text-align: center;
-
+        font-size: 30px;
+        font-weight: bold;
     }
 
     .information {
@@ -233,27 +234,26 @@
         margin-bottom: 10px;
     }
 
-    #images figure {
-        align-items: center;
-    }
-
-    #images figure img {
+    .pics img {
         width: 75%;
         height: auto;
-        margin-bottom: 0px;
-        margin-top: 20px;
+        
     }
 
-    #images figure img:hover {
+    .pics img:hover {
         border: 5px solid #023047;
         border-radius: 10px;
         box-shadow: 0 0 15px #FFB703;
     }
 
-    #images figure figcaption {
-        color: #023047;
-        margin-left: 25px;
+    .pics span {
+        position: absolute;
+        bottom: 35px;
+        left: 25px;
+        font-size: 16px;
+        padding: 10px;
+        margin: 5px;
+        margin-bottom: 5px;
         font-weight: bold;
-        text-align: left;
     }
 }
