--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -159,6 +159,11 @@
         padding: 10px;
     }
 
+    #visitcard p {
+        font-size: 20px;
+        padding: 15px;
+    }
+
     #days {
         font-size: 20px;
     }
@@ -187,8 +192,8 @@
         grid-column: 1/4;
         margin-left: 75px;
         margin-right: 75px;
-        margin-top: 45px;
-        margin-bottom: -15px;
+        margin-top: 65px;
+        margin-bottom: -65px;
         padding-top: 35px;
         box-shadow: 0 0 15px #219EBC;
     }
@@ -209,8 +214,8 @@
         grid-column: 1/4;
         margin-left: 75px;
         margin-right: 75px;
-        margin-top: 85px;
-        margin-bottom: 165px;
+        margin-top: 135px;
+        margin-bottom: 115px;
         box-shadow: 0 0 15px #219EBC;
     }
 
