--- a/styles/larger.css
+++ b/styles/larger.css
@@ -32,6 +32,7 @@
         max-width: 800px;
         padding: 30px;
     }
+
     nav ul {
         display: flex;
         justify-content: space-around;
@@ -67,5 +68,37 @@
         display: none;
     }
 
-    
-}
+    .card {
+        padding-bottom: 15px;
+    }
+
+    .card img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 0px;
+        width: 55px;
+        height: 55px;
+    }
+
+    #temp {
+        font-size: 20px;
+        padding: 15px;
+    }
+
+    #desc {
+        font-size: 20px;
+        padding: 10px;
+        margin: 0px;
+    }
+
+    .visits {
+        padding: 10px;
+        margin: 0px;
+    }
+
+    #cs {
+        padding: 12px;
+    }
