--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -11,6 +11,10 @@
         width: 100px;
         height: 100px;
         margin: 25px;
+        border: 5px solid #8ECAE6;
+    }
+
+    #header {
         border: 5px solid #219EBC;
     }
 
@@ -36,9 +40,14 @@
 
     nav a {
         display: block;
-        color: #FFB703;
+        color: #fd9f33;
         padding: 15px;
         text-decoration: none;
+    }
+
+    h1 {
+        margin: 0px 160px;
+        font-size: 30px;
     }
 
     .active {
@@ -63,27 +72,14 @@
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: 10px;
         margin: 0 auto;
+        padding: 10px;
     }
 
     footer {
         max-width: 1200px;
         margin: 0 auto;
-        background-color: #FFB703;
+        background-color: #fd9f33;
         padding: 15px;
-    }
-
-    #discover {
-        background-color: #8ECAE6;
-        padding: 35px;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    #discover {
-        color: #023047;
-        text-align: center;
-        font-size: 30px;
-        font-weight: bold;
     }
 
     .information {
@@ -283,5 +279,5 @@
         padding-top: 40px;
     }
 
-    
+
 }
