--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -25,7 +25,7 @@ header {
     position: relative;
 }
 
-img {
+.cslogo {
     height: 60px;
     width: 60px;
     margin: 20px;
@@ -280,9 +280,21 @@ footer {
     background-color: rgb(255, 255, 255, .40);
 }
 
-#grid {
+.btn {
     width: 36px;
-    height: 36px;
+    height: auto;
+    margin: 0px;
+}
+
+#toggle {
+    text-align: center;
+    padding: 25px;
+}
+
+#toggle button {
+    margin: 15px;
+    border: 2px solid #023047;
+    box-shadow: 0 0 15px #023047;
 }
 
 #grid1 {
