--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -283,4 +283,31 @@
         height: 90px;
         width: auto;
     }
+
+    .list {
+        padding-bottom: 25px;
+        padding-left: 30px;
+    }
+
+    .list section {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 2fr;
+        margin: 10px 25px;
+        text-align: left;
+        padding-top: 15px;
+    }
+
+    .list section p {
+        margin-left: 35px;
+        padding-left: 15px;
+    }
+
+    .list section h3 {
+        padding-left: 15px;
+        margin-right: -15px;
+    }
+
+    .list section a {
+        margin-left: 45px;
+    }
 }
