--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -141,10 +141,23 @@ h1 {
     right: 25px;
     font-size: 16px;
     color: #023047;
-    background-color: rgb(255, 255, 255, .25);
+    background-color: rgba(255, 255, 255, 0.40);
     border: 1px solid #023047;
     padding: 15px;
     box-shadow: 2px 2px 5px #023047;
+}
+
+.hero h2 {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    background-color: gba(220, 201, 138, 0.519);
+}
+
+.hero button {
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
 
 #parent1 {
