--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -151,7 +151,9 @@ h1 {
     position: absolute;
     top: 3px;
     left: 3px;
-    background-color: gba(220, 201, 138, 0.519);
+    background-color: #fd9f33ed;
+    padding: 10px;
+    font-size: 16px;
 }
 
 .hero button {
