--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -249,6 +249,12 @@
         margin-bottom: 10px;
     }
 
+    .pics {
+        position: relative;
+        margin-top: 20px;
+        margin-bottom: 45px;
+    }
+
     .pics img {
         width: 75%;
         height: auto;
@@ -281,6 +287,7 @@
         grid-column: 1/2;
         margin-top: 25px;
         margin-left: 50px;
+        padding: 25px;
     }
 
     #levels {
